# python-AI-projects

./: .gitignore  README.md  main.py  pyproject.toml  tutorial.txt
chroma_db/: chroma.sqlite3
routers/: chat.py  ingestion.py  langchain_ingestion.py  langchain_rag_chat.py  rag_chat.py
routers/basicRag/: ingestion.py  rag_chat.py
routers/langChainRag/: langchain_ingestion.py  langchain_rag_chat.py
schemas/: chat.py  chunk.py  document.py  embedding.py  message.py
services/: chat_service.py  conversation_service.py  openai_client.py
services/langchain_rag_services/: rag_ingestion_service.py  rag_retrieval_service.py
services/rag_services/: chunking_service.py  document_service.py  rag_chat_service.py  rag_ingestion_service.py  retrieval_service.py  vector_store_service.py  vectorization_service.py
