[project]
name = "python-ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-pymupdf4llm>=1.27.2",
    "openai>=2.43.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
